--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,8 @@ p {
 h1 {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  font-size: 2rem; }
+  font-size: 2rem;
+  color: #368cbf; }
 
 h2 {
   font-weight: bolder;
@@ -343,7 +344,6 @@ h4 {
   @media only screen and (max-width: 37.5em) {
     .extra {
       top: 60%;
-      origin: center;
       width: 320px;
       height: 700px; } }
 
@@ -670,15 +670,12 @@ h4 {
   grid-column: 2/3;
   position: relative;
   align-self: center;
-  justify-self: center;
+  justify-self: start;
+  margin-left: 9rem;
   display: grid;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1);
-  width: 800px;
-  height: 540px;
+  width: auto;
   grid-template-rows: 80px minmax(0, 1fr);
   grid-template-columns: 1fr; }
   @media only screen and (max-width: 62.5em) {
@@ -695,202 +692,20 @@ h4 {
       margin-top: 4rem;
       width: 360px; } }
 
-.top {
-  grid-row: 1/2;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly; }
+b, h2 {
+  color: #368cbf; }
 
-.top-text {
-  position: absolute;
-  left: 0%;
-  top: 40%;
-  color: white;
-  font-size: 4rem;
-  width: 100%;
-  z-index: 100;
-  text-align: center; }
-  @media only screen and (max-width: 50em) {
-    .top-text {
-      font-size: 3rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .top-text {
-      font-size: 2.4rem; } }
-  @media only screen and (max-width: 28em) {
-    .top-text {
-      font-size: 2.8rem; } }
+.download {
+  margin: 2rem 0rem; }
 
-#logout {
-  position: absolute;
-  height: 60px;
-  width: 60px;
-  top: 55%;
-  visibility: visible;
-  color: white;
-  z-index: 20; }
-
-#logout:hover {
-  transform: scale(1.04); }
-
-.left-text,
-.right-text {
-  cursor: pointer;
-  font-size: 3rem;
-  line-height: 3.6rem;
-  width: 300px;
-  margin-top: 2rem;
-  text-align: center;
-  transition: transform 1.2s ease; }
-  @media only screen and (max-width: 62.5em) {
-    .left-text,
-    .right-text {
-      font-size: 2.4rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .left-text,
-    .right-text {
-      font-size: 2rem;
-      width: 180px; } }
-  @media only screen and (max-width: 28em) {
-    .left-text,
-    .right-text {
-      font-size: 2.6rem; } }
-
-.left-text:hover, .right-text:hover {
-  transform: scale(1.1);
-  text-decoration: underline; }
-
-.img-container {
-  position: relative;
-  grid-row: 2/3;
-  width: 700px;
-  height: 400px;
-  background-color: #ffe164;
-  display: flex;
-  border-radius: 8px;
-  align-items: center;
-  justify-content: center;
-  justify-self: center;
-  align-self: center;
-  z-index: 1;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); }
-  @media only screen and (max-width: 62.5em) {
-    .img-container {
-      width: 500px; } }
-  @media only screen and (max-width: 50em) {
-    .img-container {
-      width: 500px; } }
-  @media only screen and (max-width: 37.5em) {
-    .img-container {
-      font-size: 2rem;
-      width: 350px; } }
-
-.img-container .after {
-  position: absolute;
-  justify-self: center;
-  align-self: center;
-  top: 0;
-  left: 0;
-  border-radius: 5px;
-  width: 100%;
-  height: 100%;
-  color: #fff; }
-
-.blue {
-  display: block;
-  background: rgba(0, 0, 0, 0.5); }
-
-.img-container img {
-  max-height: 90%;
-  max-width: 90%;
+.pdf-class {
+  height: 500px;
   width: auto;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%); }
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1);
+  margin-bottom: 2rem; }
 
-#good {
-  position: absolute;
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #368cbf;
-  border-radius: 8px;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
-  font-family: Montserrat, sans-serif;
-  padding-top: 2rem;
-  z-index: 4; }
-  #good p.fab {
-    color: white; }
-
-.fab {
-  font-size: 5rem;
-  text-transform: uppercase; }
-  @media only screen and (max-width: 50em) {
-    .fab {
-      font-size: 4rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .fab {
-      font-size: 3rem; } }
-
-.final-page-good img {
-  height: 170px;
-  margin: 0 8rem;
-  animation: rotate;
-  animation-duration: 6s; }
-  @media only screen and (max-width: 62.5em) {
-    .final-page-good img {
-      height: 130px;
-      margin: 20px; } }
-  @media only screen and (max-width: 37.5em) {
-    .final-page-good img {
-      height: 120px;
-      margin: 20px; } }
-  @media only screen and (max-width: 28em) {
-    .final-page-good img {
-      height: 100px;
-      margin: 10px; } }
-
-.twodiv {
-  cursor: pointer; }
-
-@keyframes rotate {
-  from {
-    transform: rotate(1deg); }
-  to {
-    transform: rotate(359deg); } }
-
-.wronganswer {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #ffe164;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 5px;
-  z-index: 3100; }
-
-.wrong-answer {
-  margin-bottom: 8rem;
-  font-size: 4rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bold; }
-
-.logout1 {
-  height: 150px;
-  right: 5vw;
-  top: 50%;
-  transform: scaleX(-1);
-  animation: animate 1.5s infinite; }
+.pdf-class img {
+  height: 100%; }
 
 .links {
   grid-row: 3/4;
@@ -939,6 +754,9 @@ h4 {
         margin-bottom: 2rem;
         font-size: 1.6rem;
         text-align: center; }
+
+figcaption {
+  color: #368cbf; }
 
 .footer {
   display: flex;
