--- a/sass/components/_ads.scss
+++ b/sass/components/_ads.scss
@@ -1,14 +1,16 @@
-// .ads {
-//     background-color: green;
-//     width: 90%;
-//     margin: auto;
-//     height: 60%;
-//  
+.sense {
+    margin: 2rem;
+    height: auto;
+    margin: auto;
 
-// &-top {
-//     margin-top: 2vw;
-//     grid-row: 1/2;
-// }
+}
 
-// }
+.sense-container {
+
+    display: flex;
+    margin-left: 5rem;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
 
