--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -5,12 +5,12 @@
     align-self: center;
     justify-self: start;
     margin-left: 9rem;
-    display: grid;
+    display: flex;
     align-items: center;
     justify-content: center;
     width: auto;
-    grid-template-rows:80px minmax(0, 1fr);
-    grid-template-columns: 1fr;
+    height: auto;
+
 
     @media only screen and (max-width:$bp-large){
         width: 600px;
