--- a/css/styles.css
+++ b/css/styles.css
@@ -673,22 +673,24 @@ h4 {
   justify-self: start;
   margin-left: 9rem;
   display: grid;
-  align-items: center;
+  align-content: center;
   justify-content: center;
-  width: auto;
-  grid-template-rows: 80px minmax(0, 1fr);
-  grid-template-columns: 1fr; }
+  width: 800px;
+  grid-template-rows: auto;
+  grid-template-columns: 2fr; }
   @media only screen and (max-width: 62.5em) {
     .main {
       width: 600px; } }
   @media only screen and (max-width: 37.5em) {
     .main {
-      grid-row: 1/2;
+      grid-row: auto;
+      grid-column: 1fr;
       margin-top: 4rem;
       width: 400px; } }
   @media only screen and (max-width: 28em) {
     .main {
       grid-row: 1/2;
+      grid-column: 1fr;
       margin-top: 4rem;
       width: 360px; } }
 
@@ -701,11 +703,43 @@ b, h2 {
 .pdf-class {
   height: 500px;
   width: auto;
-  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1);
-  margin-bottom: 2rem; }
+  margin-bottom: 4rem; }
 
 .pdf-class img {
-  height: 100%; }
+  height: 100%;
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1); }
+
+.item1 {
+  grid-column: 1/2; }
+  @media only screen and (max-width: 62.5em) {
+    .item1 {
+      grid-column: 1/2;
+      width: fit-content;
+      justify-self: center; } }
+
+.item2 {
+  grid-column: 2/3; }
+  @media only screen and (max-width: 62.5em) {
+    .item2 {
+      grid-column: 1/2;
+      width: fit-content;
+      justify-self: center; } }
+
+.item3 {
+  grid-column: 1/2; }
+  @media only screen and (max-width: 62.5em) {
+    .item3 {
+      grid-column: 1/2;
+      width: fit-content;
+      justify-self: center; } }
+
+.item4 {
+  grid-column: 2/3; }
+  @media only screen and (max-width: 62.5em) {
+    .item4 {
+      grid-column: 1/2;
+      width: fit-content;
+      justify-self: center; } }
 
 .links {
   grid-row: 3/4;
