--- a/css/styles.css
+++ b/css/styles.css
@@ -699,7 +699,7 @@ b, h2 {
   margin: 2rem 0rem; }
 
 .pdf-class {
-  height: 500px;
+  height: 300px;
   width: auto;
   margin: 4rem; }
 
@@ -714,11 +714,29 @@ b, h2 {
       grid-column: 1/2;
       width: fit-content;
       justify-self: center; } }
+  @media only screen and (max-width: 37.5em) {
+    .item1 {
+      grid-column: 1/2;
+      width: fit-content;
+      justify-self: center; } }
 
 .item2 {
   grid-column: 2/3; }
   @media only screen and (max-width: 62.5em) {
     .item2 {
+      grid-column: 2/3;
+      width: fit-content;
+      justify-self: center; } }
+  @media only screen and (max-width: 37.5em) {
+    .item2 {
+      grid-column: 1/2;
+      width: fit-content;
+      justify-self: center; } }
+
+.item3 {
+  grid-column: 3/4; }
+  @media only screen and (max-width: 62.5em) {
+    .item3 {
       grid-column: 1/2;
       width: fit-content;
       justify-self: center; } }
