--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,28 @@ h4 {
   line-height: 1.2;
   margin-bottom: 0.7rem; }
 
+.sense {
+  grid-row: 2/3;
+  width: 800px;
+  margin: 2rem auto; }
+  @media only screen and (max-width: 62.5em) {
+    .sense {
+      width: 600px;
+      height: auto; } }
+  @media only screen and (max-width: 37.5em) {
+    .sense {
+      width: 360px;
+      height: auto; } }
+
+.sense-bottom {
+  grid-row: 5/6;
+  width: 800px;
+  margin: 2rem auto; }
+  @media only screen and (max-width: 62.5em) {
+    .sense-bottom {
+      width: 600px;
+      height: auto; } }
+
 .buttons {
   display: flex;
   align-items: center;
@@ -644,7 +666,7 @@ h4 {
   align-items: center;
   background-color: #d0eaf8;
   margin: 0 auto;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto auto auto;
   grid-template-columns: 23rem 1fr; }
   @media only screen and (max-width: 75em) {
     .wrapper {
@@ -663,7 +685,7 @@ h4 {
   box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4); }
 
 .main {
-  grid-row: 2/3;
+  grid-row: 3/4;
   grid-column: 2/3;
   position: relative;
   align-self: center;
@@ -748,7 +770,7 @@ b, h2 {
       justify-self: center; } }
 
 .links {
-  grid-row: 3/4;
+  grid-row: 4/5;
   grid-column: 2/3;
   width: 800px;
   height: 500px;
