--- a/sass/components/_ads.scss
+++ b/sass/components/_ads.scss
@@ -1,14 +1,28 @@
-// .ads {
-//     background-color: green;
-//     width: 90%;
-//     margin: auto;
-//     height: 60%;
-//  
+.sense {
+  grid-row: 2/3;
 
-// &-top {
-//     margin-top: 2vw;
-//     grid-row: 1/2;
-// }
+  width: 800px;
+  margin: 2rem auto;
 
-// }
+  @media only screen and (max-width: $bp-large) {
+    width: 600px;
+    height: auto;
+  }
 
+  @media only screen and (max-width: $bp-small) {
+    width: 360px;
+    height: auto;
+  }
+}
+
+.sense-bottom {
+  grid-row: 5/6;
+
+  width: 800px;
+  margin: 2rem auto;
+
+  @media only screen and (max-width: $bp-large) {
+    width: 600px;
+    height: auto;
+  }
+}
