--- a/css/styles.css
+++ b/css/styles.css
@@ -735,6 +735,26 @@ b, h2 {
   height: 100%;
   box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1); }
 
+.ppt-class {
+  height: 300px;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  margin: 4rem;
+  transition: all, .2s; }
+
+.ppt img {
+  width: 100%;
+  height: auto;
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1); }
+
+.ppt-class img:hover {
+  transform: scale(102%);
+  box-shadow: 0 12px 14px 2px rgba(0, 0, 0, 0.16), 0 3px 24px 5px rgba(0, 0, 0, 0.16), 0 8px 10px -5px rgba(0, 0, 0, 0.24);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 12px 14px 2px, rgba(0, 0, 0, 0.16) 0px 3px 24px 5px, rgba(0, 0, 0, 0.24) 0px 8px 10px -5px; }
+
 .item1 {
   grid-column: 1/2; }
   @media only screen and (max-width: 62.5em) {
