--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -57,6 +57,30 @@ b, h2 {color: $color-blue}
 }
 
 
+
+.ppt-class {
+       height: 300px;
+       width: auto;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+    width: auto;
+    margin: 4rem;
+    transition: all, .2s;
+}
+
+.ppt img{
+    width: 100%;
+    height: auto;
+    box-shadow: $box-shadow-small;
+}
+
+.ppt-class img:hover {
+         transform: scale(102%);
+     box-shadow: 0 12px 14px 2px rgba(0,0,0,.16),0 3px 24px 5px rgba(0,0,0,.16),0 8px 10px -5px rgba(0,0,0,.24); 
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 12px 14px 2px, rgba(0, 0, 0, 0.16) 0px 3px 24px 5px, rgba(0, 0, 0, 0.24) 0px 8px 10px -5px;
+}
+
 .item1 {
   
     grid-column: 1/2;
@@ -100,6 +124,7 @@ b, h2 {color: $color-blue}
     justify-self: center;
         }
 }
+
 
 // .item3 {
 
