--- a/css/styles.css
+++ b/css/styles.css
@@ -58,26 +58,65 @@ h4 {
   margin-bottom: 0.7rem; }
 
 .sense {
-  grid-row: 2/3;
-  width: 800px;
-  margin: 2rem auto; }
-  @media only screen and (max-width: 62.5em) {
-    .sense {
-      width: 600px;
-      height: auto; } }
+  grid-row: 1/2;
+  grid-column: 2/3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem; }
   @media only screen and (max-width: 37.5em) {
     .sense {
+      grid-row: 1/2; } }
+
+.mainpage_top {
+  width: 800px;
+  height: 100px; }
+  @media only screen and (max-width: bp-large) {
+    .mainpage_top {
+      width: 100%;
+      height: 90px; } }
+  @media only screen and (max-width: bp-small) {
+    .mainpage_top {
+      grid-row: 2/3;
+      justify-content: center;
+      width: 400px;
+      height: 60px;
+      flex-direction: column; } }
+  @media only screen and (max-width: bp-smallest) {
+    .mainpage_top {
       width: 360px;
-      height: auto; } }
+      height: 60px; } }
 
 .sense-bottom {
   grid-row: 5/6;
-  width: 800px;
-  margin: 2rem auto; }
-  @media only screen and (max-width: 62.5em) {
+  grid-column: 2/3;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  width: 320px;
+  height: auto; }
+  @media only screen and (max-width: 37.5em) {
     .sense-bottom {
-      width: 600px;
-      height: auto; } }
+      grid-row: 5/6; } }
+
+@media (min-width: 600px) {
+  .mainpage_top {
+    width: 600px;
+    height: 60px; } }
+
+@media (min-width: 800px) {
+  .mainpage_top {
+    width: 800px;
+    height: 90px; } }
+
+@media (min-width: 600px) {
+  .sense-bottom {
+    width: 600px;
+    height: auto; } }
+
+@media (min-width: 800px) {
+  .sense-bottom {
+    width: 800px;
+    height: auto; } }
 
 .buttons {
   display: flex;
@@ -535,10 +574,9 @@ h4 {
     fill: #7ebc59; }
 
 .introduction {
-  grid-row: 1/2;
+  grid-row: 2/3;
   grid-column: 2/3;
   width: 800px;
-  height: 400px;
   background-color: #fff;
   justify-self: center;
   align-self: center;
