--- a/sass/components/_ads.scss
+++ b/sass/components/_ads.scss
@@ -1,28 +1,54 @@
 .sense {
-  grid-row: 2/3;
-
-  width: 800px;
-  margin: 2rem auto;
-
-  @media only screen and (max-width: $bp-large) {
-    width: 600px;
-    height: auto;
-  }
-
-  @media only screen and (max-width: $bp-small) {
-    width: 360px;
-    height: auto;
+  grid-row: 1/2;
+  grid-column: 2/3;
+ display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+    @media only screen and (max-width: 37.5em) {
+    grid-row: 1/2;
   }
 }
+
+.mainpage_top { 
+  width: 800px; height: 100px;
+
+  @media only screen and (max-width: bp-large) {
+    width: 100%;
+    height: 90px;
+  }
+  @media only screen and (max-width: bp-small) {
+    grid-row: 2/3;
+    justify-content: center;
+    width: 400px;
+    height: 60px;
+    flex-direction: column;
+  }
+
+  @media only screen and (max-width: bp-smallest) {
+    width: 360px;
+    height: 60px;
+  }
+}
+
+
+
 
 .sense-bottom {
   grid-row: 5/6;
-
-  width: 800px;
-  margin: 2rem auto;
-
-  @media only screen and (max-width: $bp-large) {
-    width: 600px;
+  grid-column: 2/3;
+margin-top:2rem;
+margin-bottom: 2rem;
+    width:320px;
     height: auto;
+
+
+  @media only screen and (max-width: 37.5em) {
+    grid-row: 5/6;
   }
 }
+@media(min-width: 600px) { .mainpage_top { width: 600px; height: 60px; } }
+@media(min-width: 800px) { .mainpage_top { width: 800px; height: 90px; } }
+@media(min-width: 600px) { .sense-bottom { width: 600px; height: auto; } }
+@media(min-width: 800px) { .sense-bottom { width: 800px; height: auto; } }
+
