--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: auto;
   margin-top: 2rem; }
   @media only screen and (max-width: 37.5em) {
     .sense {
@@ -90,6 +91,7 @@ h4 {
 .sense-bottom {
   grid-row: 5/6;
   grid-column: 2/3;
+  margin: auto;
   margin-top: 2rem;
   margin-bottom: 2rem;
   width: 320px;
