--- a/sass/components/_ads.scss
+++ b/sass/components/_ads.scss
@@ -4,6 +4,7 @@
  display: flex;
   align-items: center;
   justify-content: center;
+  margin: auto;
   margin-top: 2rem;
     @media only screen and (max-width: 37.5em) {
     grid-row: 1/2;
@@ -37,6 +38,7 @@
 .sense-bottom {
   grid-row: 5/6;
   grid-column: 2/3;
+  margin: auto;
 margin-top:2rem;
 margin-bottom: 2rem;
     width:320px;
