--- a/sass/components/_ads.scss
+++ b/sass/components/_ads.scss
@@ -6,7 +6,24 @@
   justify-content: center;
   margin: auto;
   margin-top: 2rem;
+
+
     @media only screen and (max-width: 37.5em) {
+      width: 90%;
+    grid-row: 1/2;
+  }
+}
+
+.sensegen{
+grid-column: 1/4;
+ display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+    @media only screen and (max-width: 37.5em) {
+      width: 90%;
     grid-row: 1/2;
   }
 }
@@ -21,13 +38,13 @@
   @media only screen and (max-width: bp-small) {
     grid-row: 2/3;
     justify-content: center;
-    width: 400px;
+    width: 300px;
     height: 60px;
     flex-direction: column;
   }
 
   @media only screen and (max-width: bp-smallest) {
-    width: 360px;
+    width: 300px;
     height: 60px;
   }
 }
@@ -36,16 +53,17 @@
 
 
 .sense-bottom {
-  grid-row: 5/6;
+  grid-row: 4/5;
   grid-column: 2/3;
   margin: auto;
-margin-top:2rem;
-margin-bottom: 2rem;
+  margin-top:2rem;
+  margin-bottom: 2rem;
     width:320px;
     height: auto;
 
 
   @media only screen and (max-width: 37.5em) {
+    width: 90%;
     grid-row: 5/6;
   }
 }
