--- a/sass/layout/_wrapper.scss
+++ b/sass/layout/_wrapper.scss
@@ -9,10 +9,14 @@
   margin: 0 auto;
   grid-template-rows:auto auto auto auto auto;
   grid-template-columns: 23rem 1fr;
+
   @media only screen and (max-width:$bp-largest){
     width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
-
 
   @media only screen and (max-width:$bp-large){
     grid-template-columns: 28rem 1fr;
