--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -1,30 +1,46 @@
 .sidebar {
-  grid-row: 1/7;
-  grid-column: 1/2;
-  width: 100%;
+  width: 23rem;
   height: 100%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
   padding: 1rem;
-  transition: all 0.2s ease-in-out;
 
-  @media only screen and (max-width: 50em) {
-    position: absolute;
-    width: 100vw;
-    z-index: 500;
+
+  @media only screen and (max-width: $bp-largest) {
+position: absolute;  
+top: 0px;
+left: 0px;
+width: 100vw;
+  z-index: 500;
     height: 100%;
     padding: 3rem;
-  }
-
-  @media only screen and (max-width: 28em) {
-    width: 100vw;
-    padding: 6rem;
+    display: none;
   }
 }
+
+.sidebar-container {
+  grid-row: 1/6;
+  grid-column: 1/2;
+  height: 100%;
+
+  @media only screen and (max-width: $bp-largest) {
+    display: none;
+  }
+}
+
 .sidebar h2:first-of-type {
   margin-top: 3rem;
 }
+
+.gridfiller {
+    grid-row: 1/7;
+    grid-column: 1/2;
+    background-color: white;
+    height: 100%;
+    width: 23rem;
+}
+
 
 .sidebar ul li {
   list-style-type: none;
@@ -120,15 +136,7 @@
   fill: darkgrey;
 }
 
-.sidebar-container {
-  grid-row: 1/7;
-  grid-column: 1/2;
-  height: 100%;
 
-  @media only screen and (max-width:  50em) {
-    display: none;
-  }
-}
 
 .block {
   display: block;
@@ -157,12 +165,12 @@
   display: none;
   z-index: 100;
 
-  @media only screen and(max-width: 62.5em) {
+  @media only screen and(max-width: bp-large) {
     top: 80%;
     height: 600px;
     // padding-top: 7rem;
   }
-  @media only screen and(max-width: 37.5em) {
+  @media only screen and(max-width: bp-small) {
     top: 60%;
     width: 320px;
     height: 700px;
@@ -182,7 +190,7 @@
   width: 400px;
   height: 640px;
 
-  @media only screen and(max-width: 37.5em) {
+  @media only screen and(max-width: bp-small) {
     grid-template-columns: 1fr;
     grid-template-rows: 3fr;
     width: 280px;
@@ -210,7 +218,7 @@ h4 {
   justify-self: start;
   align-self: start;
 
-  @media only screen and(max-width: 37.5em) {
+  @media only screen and(max-width: bp-small) {
     grid-row: 3/4;
     margin-top: 4rem;
   }
@@ -250,3 +258,5 @@ h4 {
 .pointer {
   cursor: pointer;
 }
+
+
