--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -14,9 +14,12 @@
     grid-template-columns: repeat(auto-fit);
     
 
-    @media only screen and (max-width:$bp-large){
+    @media only screen and (max-width:$bp-largest){
         width: 600px;
+        margin-right: 9rem;
         }
+
+
     @media only screen and (max-width:$bp-small){
         grid-row: auto;
         grid-column: 1fr;
