--- a/sass/layout/_introduction.scss
+++ b/sass/layout/_introduction.scss
@@ -4,8 +4,7 @@
     width: 800px;
     background-color: #fff;
     justify-self: center;
-    align-self: center;
-    margin: 4rem 0;
+    margin: 0;
     padding: 1rem 0;
     display: flex;
 
@@ -14,9 +13,12 @@
     border-radius: 5px;
     box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1);
 
+      @media only screen and (max-width:$bp-largest){
+        margin: auto;  
+       }
+
     @media only screen and (max-width:$bp-large){
         width: 600px;
-        height: 333px;    
        }
     @media only screen and (max-width:$bp-small){
         grid-row: 2/3;
