--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,8 @@ h4 {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      justify-content: center; } }
+      justify-content: center;
+      box-shadow: none; } }
   @media only screen and (max-width: 62.5em) {
     .wrapper {
       grid-template-columns: 28rem 1fr; } }
@@ -686,20 +687,20 @@ h4 {
   grid-template-columns: repeat(auto-fit); }
   @media only screen and (max-width: 75em) {
     .main {
-      width: 600px;
+      width: 100vw;
       margin-right: 9rem; } }
   @media only screen and (max-width: 37.5em) {
     .main {
       grid-row: auto;
       grid-column: 1fr;
       margin-top: 4rem;
-      width: 400px; } }
+      width: 320px; } }
   @media only screen and (max-width: 28em) {
     .main {
       grid-row: 1/2;
       grid-column: 1fr;
       margin-top: 4rem;
-      width: 360px; } }
+      width: 320px; } }
 
 b, h2 {
   color: #368cbf; }
@@ -741,40 +742,6 @@ b, h2 {
   transform: scale(102%);
   box-shadow: 0 12px 14px 2px rgba(0, 0, 0, 0.16), 0 3px 24px 5px rgba(0, 0, 0, 0.16), 0 8px 10px -5px rgba(0, 0, 0, 0.24);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 12px 14px 2px, rgba(0, 0, 0, 0.16) 0px 3px 24px 5px, rgba(0, 0, 0, 0.24) 0px 8px 10px -5px; }
-
-.item1 {
-  grid-column: 1/2; }
-  @media only screen and (max-width: 62.5em) {
-    .item1 {
-      grid-column: 1/2;
-      width: fit-content;
-      justify-self: center; } }
-  @media only screen and (max-width: 37.5em) {
-    .item1 {
-      grid-column: 1/2;
-      width: fit-content;
-      justify-self: center; } }
-
-.item2 {
-  grid-column: 2/3; }
-  @media only screen and (max-width: 62.5em) {
-    .item2 {
-      grid-column: 2/3;
-      width: fit-content;
-      justify-self: center; } }
-  @media only screen and (max-width: 37.5em) {
-    .item2 {
-      grid-column: 1/2;
-      width: fit-content;
-      justify-self: center; } }
-
-.item3 {
-  grid-column: 3/4; }
-  @media only screen and (max-width: 62.5em) {
-    .item3 {
-      grid-column: 1/2;
-      width: fit-content;
-      justify-self: center; } }
 
 .links {
   grid-row: 4/5;
