--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -15,8 +15,9 @@
     
 
     @media only screen and (max-width:$bp-largest){
-        width: 600px;
+        width: 100vw;
         margin-right: 9rem;
+        ;
         }
 
 
@@ -24,13 +25,13 @@
         grid-row: auto;
         grid-column: 1fr;
         margin-top: 4rem;
-        width: 400px;
+        width: 320px;
         }
     @media only screen and (max-width:$bp-smallest){
         grid-row: 1/2;
           grid-column: 1fr;
         margin-top: 4rem;
-        width: 360px;
+        width: 320px;
         }
 }
 b, h2 {color: $color-blue}
@@ -38,6 +39,7 @@ b, h2 {color: $color-blue}
 
 .download {
     margin: 2rem 0rem;
+    
 }
 
 .pdf-class {
@@ -84,49 +86,49 @@ b, h2 {color: $color-blue}
     box-shadow: rgba(0, 0, 0, 0.16) 0px 12px 14px 2px, rgba(0, 0, 0, 0.16) 0px 3px 24px 5px, rgba(0, 0, 0, 0.24) 0px 8px 10px -5px;
 }
 
-.item1 {
+// .item1 {
   
-    grid-column: 1/2;
+//     grid-column: 1/2;
 
-      @media only screen and (max-width:$bp-large){
-        grid-column: 1/2;
-            width: fit-content;
-    justify-self: center;
-        }
+//       @media only screen and (max-width:$bp-large){
+//         grid-column: 1/2;
+//             width: fit-content;
+//     justify-self: center;
+//         }
 
-          @media only screen and (max-width:$bp-small){
-        grid-column: 1/2;
-            width: fit-content;
-    justify-self: center;
-        }
-}
+//           @media only screen and (max-width:$bp-small){
+//         grid-column: 1/2;
+//             width: fit-content;
+//     justify-self: center;
+//         }
+// }
 
-.item2 {
+// .item2 {
    
-    grid-column: 2/3;
+//     grid-column: 2/3;
 
-      @media only screen and (max-width:$bp-large){
-        grid-column: 2/3;
-            width: fit-content;
-    justify-self: center;
-        }
+//       @media only screen and (max-width:$bp-large){
+//         grid-column: 2/3;
+//             width: fit-content;
+//     justify-self: center;
+//         }
 
-      @media only screen and (max-width:$bp-small){
-        grid-column: 1/2;
-            width: fit-content;
-    justify-self: center;
-        }
-}
+//       @media only screen and (max-width:$bp-small){
+//         grid-column: 1/2;
+//             width: fit-content;
+//     justify-self: center;
+//         }
+// }
 
-.item3 {
-    grid-column: 3/4;
+// .item3 {
+//     grid-column: 3/4;
 
-          @media only screen and (max-width:$bp-large){
-        grid-column: 1/2;
-            width: fit-content;
-    justify-self: center;
-        }
-}
+//           @media only screen and (max-width:$bp-large){
+//         grid-column: 1/2;
+//             width: fit-content;
+//     justify-self: center;
+//         }
+// }
 
 
 // .item3 {
