--- a/sass/layout/_wrapper.scss
+++ b/sass/layout/_wrapper.scss
@@ -16,6 +16,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    box-shadow: none;
   }
 
   @media only screen and (max-width:$bp-large){
