--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -1,13 +1,13 @@
 .sidebar {
+  position: absolute;
+  top: 0;
   width: 23rem;
-  height: 100%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
   padding: 1rem;
 
-
-  @media only screen and (max-width: $bp-largest) {
+  @media only screen and (max-width: $bp-large) {
 position: absolute;  
 top: 0px;
 left: 0px;
@@ -16,14 +16,16 @@ width: 100vw;
     height: 100%;
     padding: 3rem;
   }
+
+
 }
 
 .sidebar-container {
-  grid-row: 1/6;
+  grid-row: 1/7;
   grid-column: 1/2;
   height: 100%;
 
-  @media only screen and (max-width: $bp-largest) {
+  @media only screen and (max-width: $bp-largest {
     display: none;
   }
 }
@@ -164,12 +166,12 @@ width: 100vw;
   display: none;
   z-index: 100;
 
-  @media only screen and(max-width: bp-large) {
+  @media only screen and(max-width: $bp-large) {
     top: 80%;
     height: 600px;
     // padding-top: 7rem;
   }
-  @media only screen and(max-width: bp-small) {
+  @media only screen and(max-width: $bp-small) {
     top: 60%;
     width: 320px;
     height: 700px;
@@ -189,7 +191,7 @@ width: 100vw;
   width: 400px;
   height: 640px;
 
-  @media only screen and(max-width: bp-small) {
+  @media only screen and(max-width: $bp-small) {
     grid-template-columns: 1fr;
     grid-template-rows: 3fr;
     width: 280px;
@@ -217,7 +219,7 @@ h4 {
   justify-self: start;
   align-self: start;
 
-  @media only screen and(max-width: bp-small) {
+  @media only screen and(max-width: $bp-small) {
     grid-row: 3/4;
     margin-top: 4rem;
   }
@@ -249,6 +251,7 @@ h4 {
   transform: scale(1.1);
   opacity: 0.8;
 }
+
 
 .xxc {
   display: flex;
