--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -7,7 +7,7 @@
   background-color: #fff;
   padding: 1rem;
 
-  @media only screen and (max-width: $bp-large) {
+  @media only screen and (max-width: $bp-largest) {
 position: absolute;  
 top: 0px;
 left: 0px;
@@ -17,7 +17,6 @@ width: 100vw;
     padding: 3rem;
   }
 
-
 }
 
 .sidebar-container {
@@ -25,7 +24,7 @@ width: 100vw;
   grid-column: 1/2;
   height: 100%;
 
-  @media only screen and (max-width: $bp-largest {
+  @media only screen and (max-width: $bp-largest) {
     display: none;
   }
 }
