--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,8 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: auto;
-  margin-top: 2rem; }
+  margin: 2rem auto;
+  background-color: red; }
   @media only screen and (max-width: 37.5em) {
     .sense {
       width: 90%;
@@ -229,6 +229,10 @@ h4 {
   background-color: white;
   height: 100%;
   width: 23rem; }
+  @media only screen and (max-width: 75em) {
+    .gridfiller {
+      display: none;
+      width: 0; } }
 
 .sidebar ul li {
   list-style-type: none;
