--- a/sass/components/_ads.scss
+++ b/sass/components/_ads.scss
@@ -4,8 +4,8 @@
  display: flex;
   align-items: center;
   justify-content: center;
-  margin: auto;
-  margin-top: 2rem;
+  margin: 2rem auto;
+  background-color: red;
 
 
     @media only screen and (max-width: 37.5em) {
