--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,7 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 2rem auto;
-  background-color: red; }
+  margin: 2rem auto; }
   @media only screen and (max-width: 37.5em) {
     .sense {
       width: 90%;
@@ -527,7 +526,7 @@ h4 {
   background-color: #fff;
   justify-self: center;
   margin: 2rem;
-  padding: 1rem 0;
+  padding: 2rem 0;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -544,7 +543,6 @@ h4 {
       grid-row: 2/3;
       justify-content: center;
       width: 400px;
-      height: 500px;
       flex-direction: column; } }
   @media only screen and (max-width: 28em) {
     .introduction {
@@ -554,17 +552,6 @@ h4 {
     text-decoration: none;
     color: #368cbf;
     cursor: pointer; }
-  .introduction .dot {
-    background-color: red;
-    position: absolute;
-    width: 23px;
-    height: 23px;
-    border-radius: 50%;
-    top: 3px;
-    left: 76px;
-    opacity: 0; }
-  .introduction .dotter {
-    animation: mazerunner 4s infinite; }
   .introduction__img {
     position: relative;
     width: 200px;
@@ -573,7 +560,7 @@ h4 {
     padding: 20px;
     align-self: center;
     justify-self: flex-end;
-    margin-bottom: 2rem;
+    margin: 2rem 0;
     border-radius: 3px;
     cursor: pointer;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); }
@@ -602,47 +589,11 @@ h4 {
         font-size: 2.2rem;
         line-height: 2.6rem; } }
 
-@keyframes mazerunner {
-  0% {
-    top: 3px;
-    left: 72px;
-    opacity: 0; }
-  10% {
-    top: 37px;
-    left: 72px;
-    opacity: 1; }
-  20% {
-    top: 37px;
-    left: 34px; }
-  30% {
-    top: 73px;
-    left: 34px; }
-  40% {
-    top: 73px;
-    left: 108px; }
-  50% {
-    top: 35px;
-    left: 108px; }
-  60% {
-    top: 34px;
-    left: 145px; }
-  80% {
-    top: 148px;
-    left: 145px; }
-  90% {
-    top: 148px;
-    left: 103px;
-    opacity: 1; }
-  100% {
-    top: 180px;
-    left: 103px;
-    opacity: 0; } }
-
 .links {
   margin-top: 3rem; }
 
 .card {
-  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4); }
+  box-shadow: 2px 3px 3px rgba(28, 24, 24, 0.4); }
 
 .wrapper {
   width: 1200px;
