--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+    <div class="sidebar-container" id="sidebar">
     <div class="sidebar" id="sidebar">
         <h3 class="sidebar__close" id="sidebarClose"></h3>
         <h2>HOME</h2>
@@ -184,7 +185,7 @@
           </ul>
        </ul>
     </div>
-
+</div>
 
 </body>
 </html>
