--- a/sass/components/_ads.scss
+++ b/sass/components/_ads.scss
@@ -5,13 +5,14 @@
   align-items: center;
   justify-content: center;
   margin: 2rem auto;
-
+background-color: red;
 
     @media only screen and (max-width: 37.5em) {
       width: 90%;
     grid-row: 1/2;
   }
 }
+
 
 .sensegen{
 grid-column: 1/4;
