--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,7 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 2rem auto;
-  background-color: red; }
+  margin: 2rem auto; }
   @media only screen and (max-width: 37.5em) {
     .sense {
       width: 90%;
