--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ h4 {
   width: 8rem;
   border-radius: 10px;
   margin: 0 1rem;
-  background-color: #f6653c;
+  background-color: #7ebc59;
   box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4);
   cursor: pointer;
   font-size: 1.2rem;
@@ -185,13 +185,46 @@ h4 {
   outline: none;
   border: none; }
   .btn:hover {
-    background-color: #dd5b36; }
+    background-color: #368cbf; }
   .btn:active {
     transform: translateY(2px); }
   @media only screen and (max-width: 50em) {
     .btn {
       height: 4rem;
       width: 10rem; } }
+
+.btn-submit {
+  height: 4rem;
+  width: 10rem;
+  border-radius: 5px;
+  margin: 1rem 0;
+  margin-left: .5em;
+  background-color: #368cbf;
+  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  border: none; }
+  .btn-submit:hover {
+    filter: brightness(110%); }
+  .btn-submit:active {
+    transform: translateY(2px); }
+
+.input-submit {
+  height: 4rem;
+  background-color: #d0eaf8;
+  border: none;
+  padding: 5px;
+  padding-left: 10px;
+  border-radius: 5px;
+  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4);
+  width: 250px; }
+  @media only screen and (max-width: 62.5em) {
+    .input-submit {
+      width: 160px; } }
+  .input-submit :focus {
+    outline: none;
+    border: 0 solid; }
 
 .sidebar {
   position: absolute;
@@ -200,13 +233,16 @@ h4 {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  padding: 1rem; }
+  padding: 1rem;
+  overflow-y: auto;
+  height: 125vh; }
   @media only screen and (max-width: 75em) {
     .sidebar {
       position: absolute;
       top: 0px;
       left: 0px;
       width: 100vw;
+      display: none;
       z-index: 500;
       height: 100%;
       padding: 3rem; } }
@@ -554,21 +590,19 @@ h4 {
     cursor: pointer; }
   .introduction__img {
     position: relative;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 240px;
     background-color: #7ebc59;
     padding: 20px;
     align-self: center;
     justify-self: flex-end;
-    margin: 2rem 0;
+    margin: 0 0;
     border-radius: 3px;
-    cursor: pointer;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4); }
     @media only screen and (max-width: 62.5em) {
       .introduction__img {
         margin: 2rem 2rem; } }
     .introduction__img img {
-      width: 100%;
       height: 100%; }
   .introduction__text {
     width: 60%; }
@@ -595,8 +629,39 @@ h4 {
 .card {
   box-shadow: 2px 3px 3px rgba(28, 24, 24, 0.4); }
 
+.introduction2 {
+  grid-row: 3/4;
+  grid-column: 2/3;
+  width: 800px;
+  justify-self: center;
+  background-color: #eaeaea;
+  margin: 2rem;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 3px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4); }
+  @media only screen and (max-width: 75em) {
+    .introduction2 {
+      margin: auto; } }
+  @media only screen and (max-width: 62.5em) {
+    .introduction2 {
+      display: none; } }
+  @media only screen and (max-width: 50em) {
+    .introduction2 {
+      display: none; } }
+
+.pagesrand {
+  width: 700px;
+  display: flex;
+  justify-content: space-evenly; }
+  .pagesrand .item {
+    text-align: center; }
+
 .wrapper {
   width: 1200px;
+  min-height: 120vh;
   position: relative;
   box-shadow: 3px 0px 1px 0px rgba(0, 0, 0, 0.4);
   display: grid;
@@ -627,7 +692,7 @@ h4 {
   box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4); }
 
 .main {
-  grid-row: 3/4;
+  grid-row: 5/6;
   grid-column: 2/3;
   position: relative;
   align-self: center;
@@ -691,8 +756,8 @@ b, h2 {
   margin: 4rem;
   transition: all, .2s; }
 
-.ppt img {
-  width: 100%;
+.ppt-class img {
+  width: 220px;
   height: auto;
   box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1); }
 
