--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -17,6 +17,8 @@ $color-halloween-orange: #F75F1C;
 $color-halloween-green:  #FF9A00;
 $color-halloween-background: #594f73;
 $color-halloween-text: rgb(18, 4,55);
+$color-blue-background:#d0eaf8;
+
 
 $color-white: #fff;
 $color-black: #000;
