--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,78 +1,119 @@
 .buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    grid-row: 3/4;
-    grid-column: 2/3;
-    width: 60%;
-    margin: auto;
-    margin-top: 3rem;
-    height: 5vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-row: 3/4;
+  grid-column: 2/3;
+  width: 60%;
+  margin: auto;
+  margin-top: 3rem;
+  height: 5vw;
 
-
-    &__icon {
-        height: 4rem;
-        width: 4rem;
-        margin: 0 5rem;
-        justify-self: center;
-
-        &:hover{
-            transform: scale(1.1);
-        }
-
-        &:active{
-            transform: translateY(2px);
-        }
-
-        &-img {
-            height: 100%;
-            width: 100%;
-        }
-      }
-
-      .arrow1 {
-          transform: scaleX(-1);
-      }
-    }
-
-.btn1 {
-    grid-column: 1/2;
-}
-.btn2 {
-    grid-column: 2/3;
-}
-.btn3 {
-    grid-column: 3/4;
-}
-.btn4 {
-    grid-column: 6/7;
-}
-
-.btn{
-    height: 5rem;
-    width: 8rem;
-    border-radius: 10px;
-    margin: 0 1rem;
-    background-color: $color-orange;
-    box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4);
-    cursor: pointer;
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #fff;
-    outline: none;
-    border: none;
+  &__icon {
+    height: 4rem;
+    width: 4rem;
+    margin: 0 5rem;
+    justify-self: center;
 
     &:hover {
-    background-color: $color-orange-dark;
+      transform: scale(1.1);
     }
 
     &:active {
-        transform: translateY(2px);
+      transform: translateY(2px);
     }
 
-    @media only screen and(max-width: $bp-medium){
-        height: 4rem;
-        width: 10rem;
+    &-img {
+      height: 100%;
+      width: 100%;
     }
+  }
+
+  .arrow1 {
+    transform: scaleX(-1);
+  }
+}
+
+.btn1 {
+  grid-column: 1/2;
+}
+.btn2 {
+  grid-column: 2/3;
+}
+.btn3 {
+  grid-column: 3/4;
+}
+.btn4 {
+  grid-column: 6/7;
+}
+
+.btn {
+  height: 5rem;
+  width: 8rem;
+  border-radius: 10px;
+  margin: 0 1rem;
+  background-color: $color-green;
+  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #fff;
+  outline: none;
+  border: none;
+
+  &:hover {
+    background-color: $color-blue;
+  }
+
+  &:active {
+    transform: translateY(2px);
+  }
+
+  @media only screen and(max-width: $bp-medium) {
+    height: 4rem;
+    width: 10rem;
+  }
+}
+.btn-submit {
+  height: 4rem;
+  width: 10rem;
+  border-radius: 5px;
+  margin: 1rem 0;
+  margin-left: .5em;
+  background-color: $color-blue;
+  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  border: none;
+
+  &:hover {
+    filter: brightness(110%);
+  }
+
+  &:active {
+    transform: translateY(2px);
+  }
+}
+
+.input-submit {
+  height: 4rem;
+  background-color: $color-blue-background;
+  border: none;
+  padding: 5px;
+  padding-left: 10px;
+  border-radius: 5px;
+  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4);
+  width: 250px;
+
+    @media only screen and(max-width: $bp-large) {
+    width: 160px;
+  }
+
+  & :focus {
+      outline: none;
+      border: 0 solid;
+  }
+
   
 }
