--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -6,12 +6,15 @@
   flex-direction: column;
   background-color: #fff;
   padding: 1rem;
+  overflow-y: auto;
+  height: 125vh;
 
   @media only screen and (max-width: $bp-largest) {
 position: absolute;  
 top: 0px;
 left: 0px;
 width: 100vw;
+display:none;
   z-index: 500;
     height: 100%;
     padding: 3rem;
