--- a/sass/layout/_introduction.scss
+++ b/sass/layout/_introduction.scss
@@ -1,103 +1,134 @@
 .introduction {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  width: 800px;
+  background-color: #fff;
+  justify-self: center;
+  margin: 2rem;
+  padding: 2rem 0;
+  display: flex;
+
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1);
+
+  @media only screen and (max-width: $bp-largest) {
+    margin: auto;
+  }
+
+  @media only screen and (max-width: $bp-large) {
+    width: 600px;
+  }
+  @media only screen and (max-width: $bp-small) {
     grid-row: 2/3;
-    grid-column: 2/3;
-    width: 800px;
-    background-color: #fff;
-    justify-self: center;
-    margin: 2rem;
-    padding: 2rem 0;
-    display: flex;
+    justify-content: center;
+    width: 400px;
+    flex-direction: column;
+  }
 
-    align-items: center;
-    justify-content: space-evenly;
-    border-radius: 5px;
-    box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1);
+  @media only screen and (max-width: $bp-smallest) {
+    width: 300px;
+  }
 
-      @media only screen and (max-width:$bp-largest){
-        margin: auto;  
-       }
+  & a {
+    display: inline;
+    text-decoration: none;
+    color: $color-blue;
+    cursor: pointer;
+  }
 
-    @media only screen and (max-width:$bp-large){
-        width: 600px;
-       }
-    @media only screen and (max-width:$bp-small){
-        grid-row: 2/3;
-        justify-content: center;
-        width: 400px;
-        flex-direction: column;
-       }
+  &__img {
+    position: relative;
+    width: 150px;
+    height: 240px;
+    background-color: $color-green;
+    padding: 20px;
+    align-self: center;
+    justify-self: flex-end;
+    margin: 0 0;
+    border-radius: 3px;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
 
-       @media only screen and (max-width: $bp-smallest){
-        width: 300px;
+    @media only screen and (max-width: $bp-large) {
+      margin: 2rem 2rem;
     }
 
-       & a{
-           display: inline;
-           text-decoration: none;
-           color: $color-blue;
-           cursor: pointer;
-       }
-
-
-
-    
-    
-    &__img {
-        position: relative;
-        width: 200px;
-        height: 200px;
-        background-color: $color-green;
-        padding: 20px;
-        align-self: center;
-        justify-self: flex-end;
-        margin: 2rem 0;
-        border-radius: 3px;
-        cursor: pointer;
-        box-shadow: 3px 3px 3px rgba(0,0,0, 0.4);
-
-        @media only screen and (max-width:$bp-large){
-          margin:2rem 2rem;
-           }
-
-        & img {
-            width: 100%;
-            height:100%;
-        }
+    & img {
+      height: 100%;
     }
+  }
 
-    &__text{
-        width: 60%;
+  &__text {
+    width: 60%;
 
-        @media only screen and (max-width:$bp-small){
-            width: 90%;
-            margin-top: 2rem;
-            }
-
+    @media only screen and (max-width: $bp-small) {
+      width: 90%;
+      margin-top: 2rem;
     }
+  }
 
-    &__text p{
-        font-size: 2rem;
-        line-height: 2.8rem;
-        font-weight: 200;
+  &__text p {
+    font-size: 2rem;
+    line-height: 2.8rem;
+    font-weight: 200;
 
-        @media only screen and (max-width:$bp-small){
-           font-size: 1.6rem;
-           line-height: 2.2rem;
-           }
-        @media only screen and (max-width:$bp-smallest){
-           font-size: 2.2rem;
-           line-height: 2.6rem;
-           }
-
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.6rem;
+      line-height: 2.2rem;
     }
+    @media only screen and (max-width: $bp-smallest) {
+      font-size: 2.2rem;
+      line-height: 2.6rem;
+    }
+  }
 }
 
-
-
 .links {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
 
 .card {
-    box-shadow: 2px 3px 3px rgba(28, 24, 24, 0.4);
+  box-shadow: 2px 3px 3px rgba(28, 24, 24, 0.4);
+}
+
+.introduction2 {
+  grid-row:3/4;
+grid-column: 2/3;
+width: 800px;
+  justify-self: center;
+  background-color: #eaeaea;
+  margin: 2rem;
+  padding: 2rem;
+  display: flex;
+flex-direction: column;
+  align-items: center;
+      border-radius: 3px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+
+
+
+  @media only screen and (max-width: $bp-largest) {
+    margin: auto;
+  }
+
+  @media only screen and (max-width: $bp-large) {
+   display:none;
+  }
+  @media only screen and (max-width: $bp-medium) {
+    display:none;
+  }
+
+
+}
+
+.pagesrand {
+  width: 700px;
+  display: flex;
+  justify-content: space-evenly; 
+
+& .item{
+  text-align: center;
+}
+
 }
