--- a/sass/layout/_wrapper.scss
+++ b/sass/layout/_wrapper.scss
@@ -1,5 +1,6 @@
 .wrapper {
   width: 1200px;
+  min-height: 120vh;
   position:relative;
   box-shadow: 3px 0px 1px 0px rgba(0,0,0,.4);
   display: grid;
